[gd_scene load_steps=12 format=3 uid="uid://p2pddrlg8x0s"]

[ext_resource type="Script" path="res://Scenes/Card UI/card_ui.gd" id="1_1bu4v"]
[ext_resource type="Theme" uid="uid://f2d0gj7br2yh" path="res://main_theme.tres" id="1_cvibf"]
[ext_resource type="Script" path="res://Scenes/Card UI/card_state_machine.gd" id="3_ddpuy"]
[ext_resource type="StyleBox" uid="uid://dtuumd4bmhr1g" path="res://Scenes/Card UI/card_dragging_stylebox.tres" id="3_ndnbd"]
[ext_resource type="Script" path="res://Scenes/Card UI/Card States/card_base_state.gd" id="4_a42kl"]
[ext_resource type="Texture2D" uid="uid://cn6xf4f3typ2m" path="res://Sprites/UI/turret_shoot_icon.png" id="4_aw4sp"]
[ext_resource type="Script" path="res://Scenes/Card UI/Card States/card_clicked_state.gd" id="5_susg5"]
[ext_resource type="Script" path="res://Scenes/Card UI/Card States/card_dragging_state.gd" id="6_flod3"]
[ext_resource type="Script" path="res://Scenes/Card UI/Card States/card_released_state.gd" id="7_hssdj"]
[ext_resource type="Script" path="res://Scenes/Card UI/card_aiming_state.gd" id="8_auado"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4exbk"]
size = Vector2(49.5, 59.5)

[node name="Card UI" type="Control"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 60.0
theme = ExtResource("1_cvibf")
script = ExtResource("1_1bu4v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_ndnbd")

[node name="Cost" type="Label" parent="."]
layout_mode = 1
offset_top = -3.0
offset_right = 9.0
offset_bottom = 18.0
theme = ExtResource("1_cvibf")
text = "2"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -15.5
offset_right = 16.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_aw4sp")
expand_mode = 1
stretch_mode = 5

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(24.5, 29.5)
shape = SubResource("RectangleShape2D_4exbk")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_ddpuy")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_a42kl")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_susg5")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_flod3")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_hssdj")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_auado")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
